# modular-file-renderer

./: .dockerignore  .gitignore  .konchrc  .mailmap  .pre-commit-config.yaml  .travis.yml  0.js  10.csv  AUTHORS.rst  Breaking Images.ipynb  Breaking Tabular.ipynb  CHANGELOG  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  MFR Renderer Integration.ipynb  NOTICE  README-docker-compose.md  README.html  README.md  README.rst  \  body.html  circus.ini  config.js  configuringDevEnv  configuringDevEnv.md  conftest.py  constraints.txt  dev-requirements.txt  doc-requirements.txt  environment.yml  index.js  main.py  minimal-requirements.txt  package.json  pdf.js  plain.txt  (+14 more)
.ipynb_checkpoints/: Breaking Images-checkpoint.ipynb  Breaking Tabular-checkpoint.ipynb  spss sav rpy-checkpoint.ipynb
docs/: api_reference.rst  changelog.rst  code.rst  conf.py  core.rst  examples.rst  extensions.rst  index.rst  install.rst  integrations.rst  license.rst  modules.rst  overview.rst  plugins.rst  providers.rst  quickstart.rst  server.rst  settingup.rst
examples/: ExampleSPSS.sav  Untitled.txt  ada-example.ada  auto.dta  blank.xls  blank2.xlsx  blarg.js  code.R  dat435.sav  datar.r  datas.sav  fake as text.txt  fakecsv.csv  ffc12.dta  ffc13.dta  mydata.csv  nargle.js  plain text as html.html  plain.docx  plain.txt  sample avi.avi  sample.csv  sample.rst  sample.xls  sample.xlsx  sample1.ods  test.csv  test.docx  test.odt  test.py  test.xls  text.xlsx  this.html  webaccess.csv
mfr/: __init__.py  _cli.py  _config.py  _core.py  _core_methods.py  _exceptions.py  cli.py  compat.py  conftest.py  core.py  exceptions.py  installer.py  mfr.css  settings.py  test_core.py  version.py
mfr_audio/: __init__.py  render.py  test_audio.py
mfr_code_pygments/: __init__.py  handler.py  render.py  test_code_pygments.py
mfr_docx/: __init__.py  render-requirements.txt  render.py  test_docx.py
mfr_geo/: README.md  __init__.py  render.py
mfr_image/: __init__.py  export.py  render.py  test_image.py
mfr_image2/: __init__.py
mfr_image_exporter/: __init__.py  export.py
mfr_ipynb/: .gitignore  LICENSE  README.rst  __init__.py  cloud_demo_fast.ipynb  export.py  render-requirements.txt  render.py  setup.py
mfr_libreoffice/: __init__.py  render.py  test_libreoffice.py
mfr_md/: __init__.py  render-requirements.txt  render.py  test_md.py
mfr_movie/: __init__.py  render.py  test_movie.py
mfr_pdb/: __init__.py  render-requirements.txt  render.py
mfr_pdf/: __init__.py  render-requirements.txt  render.py  test_pdf.py
mfr_rst/: __init__.py  render.py  test_rst.py
mfr_tabular/: __init__.py  compat.py  configuration.py  csv_tools.py  dependencies.py  exceptions.py  ezodf_tools.py  import_dependencies.py  panda_tools.py  render-requirements.txt  render.py  test_tabular.py  utilities.py  xlrd_tools.py
mfr_template/: __init__.py  configuration.py
player/: __init__.py  app.py  app_config.py  config.py  config_local.py.example  mfr_config.py  mfr_config_local.py.example
previewer/: app.py  main.py
renderer/: __init__.py  exporter.html  hide.js
src/: config.js
static/: build  hypothesis.html  hypothesis.js  locale.properties  mfr-worker.js  mfr.child.js  mfr.js  mfrworker.js  (+3 more)
(+661 files in other folders)
