[tool.poetry]
name = "mfr"
version = "25.0.0"
description = "Modular File Renderer"
authors = ["Center for Open Science <contact@cos.io>"]
readme = "README.md"
# requires-python = ">=3.13,<3.14"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "3.10.5"
chardet = "5.2.0"
furl = "2.0.0"
humanfriendly = "10.0"
invoke = "2.2.0"
mako = "1.0.1"
sentry-sdk = "2.22.0"
setuptools = "80.1.0"
stevedore = "5.4.1"
tornado = "6.4.2"
agent = "0.1.2"
google-auth = "2.38.0"
Pygments = "2.19.1"
pydocx = "0.9.10"
olefile = "0.44"
Pillow = "11.0.0"
psd-tools = "1.4"
ipython = "7.31.1"
nbconvert = "4.2.0"
nbformat = "4.1.0"
traitlets = "4.2.2"
jsonschema = "2.4.0"
jinja2 = "3.1.3"
mistune = "0.8.1"
reportlab = "4.4.0"
docutils = "0.21.2"
pandas = "2.2.3"
xlrd = "1.0.0"
h5py = "3.13"
scipy = "1.14.1"
markdown = "3.8.0"
certifi = "2025.1.31"
unoconv = "0.9.0"

waterbutler = { git = "https://github.com/CenterForOpenScience/waterbutler.git", branch = "feature/buff-worms" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "4.13.3"
colorlog = "6.9.0"
coveralls = "3.3.1"
flake8 = "7.1.2"
ipdb = "0.13.13"
mccabe = "0.7.0"
pydevd = "3.3.0"
pyflakes = "3.2.0"
pytest = "8.1.1"
pytest-cov = "4.1.0"
pyzmq = "26.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "8.2.3"
sphinx-autobuild = "2024.10.3"
sphinx-rtd-theme = "3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
